# thrift_asio

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  __thrift__asio__transport_8hpp_source.html  annotated.html  classapache_1_1thrift_1_1transport_1_1_t_asio_transport-members.html  classapache_1_1thrift_1_1transport_1_1_t_asio_transport.html  classbetabugs_1_1networking_1_1thrift__asio__client-members.html  classbetabugs_1_1networking_1_1thrift__asio__client.html  classbetabugs_1_1networking_1_1thrift__asio__client__transport-members.html  classbetabugs_1_1networking_1_1thrift__asio__client__transport.html  classbetabugs_1_1networking_1_1thrift__asio__connection__management__mixin-members.html  classbetabugs_1_1networking_1_1thrift__asio__connection__management__mixin.html  classbetabugs_1_1networking_1_1thrift__asio__server-members.html  classbetabugs_1_1networking_1_1thrift__asio__server.html  classbetabugs_1_1networking_1_1thrift__asio__transport-members.html  classbetabugs_1_1networking_1_1thrift__asio__transport.html  classes.html  dir_35371287e0253107d33147aec810d54b.html  dir_83f86263fb9236a44ab43092ca432054.html  dir_d44c64559bbebec7f509842c48db8b23.html  example_client_8cpp-example.html  example_server_8cpp-example.html  examples.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  params.json  structapache_1_1thrift_1_1transport_1_1_t_asio_transport_event_handlers-members.html  structapache_1_1thrift_1_1transport_1_1_t_asio_transport_event_handlers.html  structbetabugs_1_1networking_1_1thrift__asio__transport_1_1event__handlers-members.html  structbetabugs_1_1networking_1_1thrift__asio__transport_1_1event__handlers.html  (+5 more)
docs/: Doxyfile  footer.html  header.html
examples/: example_client.cpp  example_server.cpp
examples/model/: chat.thrift
include/betabugs/networking/: thrift_asio_client.hpp  thrift_asio_client_transport.hpp  thrift_asio_connection_management_mixin.hpp  thrift_asio_server.hpp  thrift_asio_transport.hpp
search/: all_1.js  all_2.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  functions_0.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  search.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js
tests/: test_all.cpp  test_asynchronous.cpp  test_synchronous.cpp  test_transport.cpp
tests/model/: test.thrift
